[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plyable"
version = "0.0.3"
authors = [
  { name="Christine Kinniburgh", email="pip@cjkinni.com" },
]
description = "A Microframework for working with LLMs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/cjkinni/plyable"
"Bug Tracker" = "https://github.com/cjkinni/plyable/issues"